# dualAnt

./: .gitmodules  bitbucket-pipelines.yml
Source/: AntHost.cpp  AntHost.h  AntMessage.cpp  AntMessage.h  AntMessage.hpp  AntMessageFactory.cpp  AntMessageFactory.h  AntParser.cpp  AntParser.h  CMakeLists.txt  HbAlgo.cpp  HbAlgo.h  HbAlgo.hpp  IGnss.hpp  SensorSniffer.cpp  SensorSniffer.h  SensorSniffer.hpp  SerialCommunication.cpp  SerialCommunication.h  antdefines.h
Source/Examples/: CMakeLists.txt
Source/Examples/hello_tangram/: Main.cpp
Source/Test/: CMakeLists.txt  TestAntHost.cpp  TestAntParser.cpp  TestHbAlgo.cpp  TestSensorSniffer.cpp  test.cpp
Source/ant/: AntHost.cpp  AntMessage.cpp  AntMessage.hpp
Source/ant/test/: TestAntHost.cpp
Source/dualAnt/: CMakeLists.txt  HbAlgo.cpp  SensorSniffer.cpp
Source/dualAnt/ant/: AntHost.hpp  AntMessageFactory.cpp
Source/dualAnt/include/: MapController.hpp
Source/dualAnt/include/ant/: AntMessage.hpp  antmessage.h  types.h
Source/dualAnt/interfaces/: Gnss.hpp  IMapViewer.hpp
Source/dualAnt/mapcontroller/: IMapViewer.hpp
Source/dualAnt/mapcontroller/tangram/: CMakeLists.txt  MapViewerTangram.cpp  MapViewerTangram.hpp
Source/dualAnt/src/: MapController.cpp
Source/dualAnt/test/: TestAntHost.cpp  TestMapController.cpp  TestSensorSniffer.cpp
Source/examples/: DemoApplication.mm  Main.mm
Source/mapcontroller/: MapController.cpp  MapController.h  MapController.hpp
Source/mapcontroller/mapviewer/tangram/: MapViewerTangram.cpp  MapViewerTangram.h
Source/mapcontroller/test/: TestMapController.cpp
Source/mapviewer/: CMakeLists.txt  MapViewerTangram.cpp  MapViewerTangram.hpp
Source/platform/: CMakeLists.txt
Source/platform/interfaces/: SerialCommunication.h
Source/platform/osx/: CMakeLists.txt  dummy.cpp  dummy.hpp
docker/: Dockerfile
